--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
